# OwnStonks

./: .gitignore  .gitmodules  .jazzy.yaml  .pre-commit-config.yaml  .swiftlint.yml  Brewfile  IDETemplteMacros.plist  README.md  bootstrap.zsh  bun.lockb  justfile  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: api-ci.yml  apple-platforms-ci.yml  ci.yml
.husky/: pre-commit
Locales/: en.js
Modules/AppUI/: Package.swift
Modules/Features/: .gitignore  Package.swift
Modules/Navigation/: Package.swift
Modules/PersistentData/: Package.swift
Modules/RemoteNotifcations/: Package.swift
Modules/SharedStuff/: Package.swift
Modules/StonksKit/: Package.swift
Modules/swift-stonks-api/: Package.swift
Old/: package.json
Old/OwnStonks/: ContentView.swift  Persistence.swift
Old/OwnStonksTests/: ExchangeRateManagerTests.swift
OwnStonks/: AppDelegate_iOS.swift  AppDelegate_macOS.swift  Container.swift  ContentView.swift  Item.swift  OwnStonks.entitlements  OwnStonksApp.swift  OwnStonksDev.entitlements  Persistence.swift  ZaWarudo.swift
OwnStonks.xcodeproj/: project.pbxproj
OwnStonks/Enumerations/: AppSizes.swift  Currencies.swift  Screens.swift  TransactionTypes.swift  (+1 more)
Scripts/: clear_mac_data.sh  generate_docs.sh  make_secrets.py  pre_compile.sh
Shared/: Constants.swift  ContentView.swift  OwnStonksApp.swift
Tests/: OwnStonks.xctestplan  OwnStonksDev.xctestplan  Transactions.xctestplan
apps/API/: Dockerfile  justfile  pyproject.toml
docs/: Classes.html  index.html
scripts/: initialize-python-environment.zsh
(+405 files in other folders)
