[tool.poetry]
name = "ownstonks"
version = "0.1.0"
description = ""
authors = ["Kamaal Farah <kamaal.f1@gmail.com>"]
readme = "README.md"
packages = [{ include = "*.py", from = "Scripts" }]

[tool.poetry.dependencies]
python = "^3.11"
kamaalpy = "^0.1.0"


[tool.poetry.group.dev.dependencies]
xctools-kamaalio = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
